fix(animation): more spacing fixes

--- a/components/block/animation/animation.module.scss
+++ b/components/block/animation/animation.module.scss
@@ -23,7 +23,7 @@
 }
 
 .mycanvas {
-	@apply invisible md__visible sticky w-full h-[56vw] max-h-screen -top-[100vh] left-0 z-0;
+	@apply invisible md__visible md__sticky w-full h-[56vw] max-h-screen -top-[200vh] left-0 z-0;
 
 	@screen md {
 		@apply top-[10vw];
@@ -35,7 +35,7 @@
 }
 
 .mobileimage {
-	@apply visible md__invisible sticky w-full h-[56vw] top-[10vh] max-h-screen z-0;
+	@apply visible md__invisible sticky w-full h-[56vw] top-[17vw] max-h-screen z-0;
 }
 
 .notloaded {
@@ -79,18 +79,22 @@
 }
 
 .three {
-	@apply relative md__absolute pl-20 top-[185vw];
+	@apply relative pl-20 top-[185vw];
 
 	@screen md {
-		@apply flex flex-row-reverse top-[15vw];
+		@apply flex flex-row-reverse top-0 pt-[55vw];
 	}
 
 	@screen lg {
-		@apply top-[20vw];
+		@apply pt-[20vw];
 	}
 
 	@screen xl {
-		@apply top-[30vw];
+		@apply -top-[5vw] pt-[5vw];
+	}
+
+	@screen 2xl {
+		@apply -top-[25vw];
 	}
 }
 
@@ -98,15 +102,19 @@
 	@apply relative pl-20 top-[185vw] pt-[80vw];
 
 	@screen md {
-		@apply flex flex-row-reverse pr-20 pt-[105vw];
+		@apply flex flex-row-reverse pr-20 top-20 pt-[55vw];
 	}
 
 	@screen lg {
-		@apply pt-[60vw];
+		@apply top-20 pt-[55vw];
 	}
 
 	@screen xl {
-		@apply pt-[48vw];
+		@apply -top-[5vw] pt-[35vw];
+	}
+
+	@screen 2xl {
+		@apply -top-[25vw];
 	}
 }
 
